# nextjs-fastapi-boilerplate

./: README.md
backend/: Dockerfile  README.md  pyproject.toml  test.db  todos.db
backend/app/: main.py
backend/app/core/: config.py  db.py
backend/app/features/todos/: model.py  router.py  schemas.py  service.py
backend/tests/: test_services.py
backend/todo_app_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(main)/: layout.tsx  page.tsx
frontend/src/components/features/todos/: AddTodoForm.tsx  DeleteTodoAlert.tsx  EditTodoModal.tsx  ThemeToggle-component.tsx  ThemeToggle.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/components/features/todos/__tests__/: TodoItem.test.tsx
frontend/src/components/ui/: dropdown-menu.tsx  select.tsx
frontend/src/services/: todosService.ts
